# embedded-ci-demo

./: .executionplatform  CMakeLists.txt  Dockerfile  Jenkinsfile  Readme.md
cmake/: BuildHelper.cmake  arm_gcc_toolchain.cmake
ep-cli/: ep.bat  ep.py  ep.sh  rabbit_rpc.py  requirements.txt
src/: CMakeLists.txt  HardwareCrc.h  ICrc.h  SoftwareCrc.h  TestHardwareCrc.cpp  TestSoftwareCrc.cpp  ViolateCppRuleOfThree.cpp
target_bsp_stm32f407/: CMakeLists.txt
target_bsp_stm32f407/include/: SFR_Access.h  bsp.h  stm32f4xx_hal_conf.h
target_runner_gtest/: CMakeLists.txt
