cmake_minimum_required(VERSION 3.13)
project(ep-target)
cmake_policy(SET CMP0048 NEW)
cmake_policy(SET CMP0076 NEW)

include("cmake/BuildHelper.cmake")

if(${CMAKE_HOST_SYSTEM_NAME} MATCHES ${CMAKE_SYSTEM_NAME})
    set(TARGET_BUILD false CACHE BOOL  "Documentation")
    message("Host build detected")
else()
    set(TARGET_BUILD true CACHE BOOL  "Documentation")
    message("Target build detected")
endif()

if (DEFINED BSP_DIR)
    message("Selected BSP ${BSP_DIR}")
elseif(TARGET_BUILD)
    message(FATAL_ERROR "You need to specify the directory containing the bsp to be used with -DBSP_DIR=<Path>")
endif()

if(TARGET_BUILD)
    add_subdirectory(${BSP_DIR})
    add_subdirectory(external)
    add_subdirectory(target_runner_gtest)
    add_subdirectory(src)
else()
    add_subdirectory(external)
    add_subdirectory(src)
endif()
